<resources>
    <!-- App Info -->
    <string name="app_name">SafeTravels</string>
    <string name="app_img">SafeTravels Logo</string>

    <!-- App Actions -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_upload_image">Upload Image</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_remove_account">Delete Account</string>
    <string name="action_send_reset">Send Password Reset email</string>
    <string name="action_view_favorites">Favorites</string>
    <string name="action_create_new_message">Create New Message</string>
    <string name="action_post">Post</string>
    <string name="action_delete_post">Delete Post</string>
    <string name="action_save_post">Update</string>
    <string name="action_send_message">send message</string>
    <string name="action_add_new_friend">add new friend</string>
    <string name="action_decline_friend">decline friend</string>

    <!-- App Labels -->
    <string name="label_chat_list">Chat List</string>
    <string name="label_blog_post">Blog Post</string>
    <string name="label_location">Location</string>
    <string name="label_date">Date</string>
    <string name="label_upload_images">Upload Image(s)</string>
    <string name="label_vacation_photo">vacation photo</string>
    <string name="label_recent_posts">Recent Posts</string>
    <string name="label_pending_friend_requests">Pending Friend Requests</string>
    <string name="label_friends_list">Friends List</string>
    <string name="default_counter_label">(0)</string>
    <string name="label_conversation">Conversation</string>
    <string name="label_edit_post">Edit Post</string>
    <string name="label_image_view_1">image view 1</string>
    <string name="label_image_view_2">image view 2</string>
    <string name="label_image_view_3">image view 3</string>
    <string name="label_image_view_4">image view 4</string>
    <string name="label_recmessage">recMessage</string>
    <string name="label_post_title">Post Title</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_sex">Sex</string>
    <string name="label_verification_pending">Verification Pending</string>
    <string name="label_profile_approved">Profile Approved</string>
    <string name="label_rejected">Profile Rejected</string>

    <!-- App Prompts -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="prompt_profile_image">Profile Image</string>
    <string name="prompt_error"> </string>
    <string name="prompt_photo">Upload Profile Image</string>
    <string name="prompt_welcome">Welcome, User!</string>
    <string name="prompt_log_in">Log In</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="prompt_enter_email">Enter email address</string>
    <string name="prompt_post_hint">Tell the community about your trip . . .</string>
    <string name="prompt_location_hint">Enter trip location</string>
    <string name="prompt_post_date">When did you go?</string>
    <string name="prompt_profile_updated">User profile updated.</string>
    <string name="prompt_type_message">Type Message . . .</string>
    <string name="prompt_enter_post_title">Enter Post Title</string>
    <string name="prompt_pending_verification">Verification can take up to 30 seconds. You will have access to the app once account is approved.</string>
    <string name="label_approved_profile">Verification has been approved! You are now able to log in and have full access to the app.</string>
    <string name="prompt_rejected_profile">Verification has been rejected. We apologize currently SafeTravels is only available for women.</string>

    <!-- App String Arrays -->
    <string-array name="actions_image">
        <item>Take a Photo</item>
        <item>Choose from Library</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="prompt_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- App Titles -->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>
    <string name="title_new_post">New Post</string>
    <string name="title_friends">Friends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_edit_post">EditPostActivity</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_conversation">Conversation</string>
    <string name="title_view_post">Post</string>
    <string name="title_edit_post">Edit Post</string>
    <string name="title_activity_approved_user">ApprovedUserActivity</string>
    <string name="title_activity_rejected_user">RejectedUserActivity</string>

    <!-- App Warnings -->
    <string name="warning_invalid_email">Not a valid email</string>
    <string name="warning_invalid_password">Password must be >5 characters</string>
    <string name="warning_login_failed">"Login failed"</string>
    <string name="warning_empty_field">All fields are required</string>
    <string name="warning_rejected_account">Account Rejected. Unable to log in.</string>
    <string name="warning_rejected_register">Email is banned and unable to create a new account.</string>
    <string name="warning_used_username">Username is already taken</string>
    <string name="label_sentmessage">sentMessage</string>
    <string name="prompt_log_out">Log Out</string>
    <string name="prompt_log_out_confirmation">Are you sure you want log out?</string>
    <string name="prompt_delete_account_confirmation">Are you sure you wish to remove your account? This is a permanent action and cannot be undone.</string>
    <string name="prompt_delete_account">Delete Account</string>
    <string name="prompt_delete_post">Are you sure you want to delete this post?</string>
    <string name="prompt_delete_post_confirmation">This action is permanent and cannot be undone.</string>
    <string name="action_remove_post">Delete Post</string>
    <string name="action_accept_button">ACCEPT</string>
    <string name="action_decline_button">DECLINE</string>
    <string name="label_password_req">Must be 9 characters or longer</string>
    <string name="bttn_new_message">Add</string>

    <!-- App Just Added-->


</resources>