<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_new_post"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/title_new_post" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_baseline_people_alt_24"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_2_24"
        android:title="@string/title_profile" />


</menu>