<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.SafeTravels.FullscreenContainer"
    tools:context=".UserValidationActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="0dp"
        android:layout_height="309dp"
        android:contentDescription="@string/app_img"
        android:src="@drawable/playstore_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/pendingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pendingProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="128dp" />

            <TextView
                android:id="@+id/pending_title"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_verification_pending"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/pending_label"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:gravity="center"
                android:text="@string/prompt_pending_verification"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/approvedView"
        android:layout_width="409dp"
        android:layout_height="420dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/approved_title"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_profile_approved"
                android:textColor="#00C853"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/approved_label"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:gravity="center"
                android:text="@string/label_approved_profile"
                android:textColor="#00C853"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/rejectedView"
        android:layout_width="409dp"
        android:layout_height="420dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rejected_Label"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_rejected"
                android:textColor="@android:color/holo_red_light" />

            <TextView
                android:id="@+id/rejected_TV"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:gravity="center"
                android:text="@string/prompt_rejected_profile"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>